changed swagger UI
