# routes/authRoutes.js
@@ -5,8 +5,8 @@ const { authenticateToken } = require('../middleware/authMiddleware');
 
 router.post('/register', authController.register);
 router.post('/login', authController.login);
-router.get('/getUser',  authController.getUser);
-router.put('/updateUser',  authController.updateUser);
-router.delete('/deleteUser',  authController.deleteUser);
+router.get('/getUsers',authenticateToken,  authController.getUsers);
+router.put('/updateUser',authenticateToken,  authController.updateUser);
+router.delete('/deleteUser',authenticateToken,  authController.deleteUser);
 
 module.exports = router;
